[project]
name = "lsum-enhanced"
version = "1.0.1"
description = "Directory summary tool with powerful grouping, and recursive searching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.2",
    "flit-core>=3.12.0",
    "pathspec>=0.12.1",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "rich>=15.0.0",
]

[project.scripts]
lse = "lsum.main:cli"

[tool.flit.module]
name = "lsum"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

